<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">嚴選餐廳</string>
    <string name="action_settings">Settings</string>
    <string name="about_us_string">關於我們</string>
    <string name="about_us">嗨, \n\n嚴選餐廳是一個專注蒐集好餐廳的 APP, \n\n我們從網路上的食記、網友推薦、餐廳網站...等等資訊中, 選出我們認為的好餐廳, 如果你有任何的建議, 歡迎Email讓我們知道. \n\n感謝您. \n\nEmail: brotherkos\@gmail.com</string>
    <string name="yes_string">確定</string>
    
    <string name="menu_settings">閱讀設定</string>
    <string name="menu_respond">意見回饋</string>
    <string name="menu_aboutus">關於我們</string>
    <string name="menu_recommend">為App評分</string>
    <string name="menu_search">搜索</string>
    
    <string name="my_collection">我的收藏</string>
    <string name="my_recommend">我要推薦</string>
    <string name="locaiotn_search">依地點找餐廳</string>
    <string name="category_search">依類別找餐廳</string>
    <string name="foodtype_search">依料理找餐廳</string>
    <string name="near_food">附近美食</string>
    
    <string name="respond_mail_address">service@kosbrother.com</string>
    <string name="respond_mail_title">意見回餽 from 嚴選餐廳</string>
    <string name="recommend_url">https://play.google.com/store/apps/developer?id=KosBrother</string>
    
    <string name="fake_note">\[食記\]人氣一品之歷久不衰Buffet之王!! 喜來登十二廚自助餐廳近美食</string>
    <string name="search_hint">請輸入餐廳名稱</string>

</resources>