<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background"
 	 >
     
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        >
        <LinearLayout  android:id="@+id/my_collection"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/restaurant_selector"
            android:clickable="true"
            android:padding="15dp"
            >
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:src="@drawable/food_collection"
                />     
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_collection"
                />
        </LinearLayout>      
    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        >
        
        <LinearLayout android:id="@+id/my_travel_season"
             android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/restaurant_selector"
            android:clickable="true"
            android:padding="15dp"        
            >
            <ImageView 
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/food"
                />     
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_search"
                />
        </LinearLayout>
        <LinearLayout android:id="@+id/my_setting"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/restaurant_selector"
            android:clickable="true"
            android:padding="15dp"
            android:layout_marginLeft="5dp"           
            >
            <ImageView 
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/location"
                />     
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locaiotn_search"
                />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        >
        <LinearLayout android:id="@+id/my_collection"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/restaurant_selector"
            android:clickable="true"
            android:padding="15dp" 
            >
            <ImageView 
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/thumb_up"            
                />     
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_recommend"
                />
        </LinearLayout>
        
        <LinearLayout android:id="@+id/my_travel_theme"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/restaurant_selector"
            android:clickable="true"
            android:padding="15dp"
            android:layout_marginLeft="5dp"            
            >
            <ImageView 
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:src="@drawable/map"
                />     
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/near_food"
                />
        </LinearLayout>
   
    </LinearLayout>
    
    
    

</LinearLayout>